fix(EditInventory): Fixes lobby item not working as it should and prevent saving editing game when leaving the menu as editing starting lives and max time.